# fabiplus

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  bandit-report.json  pyproject.toml  pytest.ini  pytest.xml  requirements.txt  safety-report.json  safety-test.json  safety-updated.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  ci.yml  test.yml
fabiplus/admin/: logs.py  routes.py  ui.py
fabiplus/admin/templates/: base.html  logs.html
fabiplus/api/: auto.py
fabiplus/cli/: main.py
fabiplus/cli/commands/: app.py  dev.py  project.py
fabiplus/cli/templates/: app.py  project.py
fabiplus/conf/: settings.py
fabiplus/core/: activity.py  app.py  apps.py  custom_auth.py  migrations.py  models.py
fabiplus/core/media/: models.py  processors.py  validators.py
fabiplus/core/orm/: base.py  sqlalchemy.py  sqlmodel.py  tortoise.py
fabiplus/core/permissions/: base.py  service.py
fabiplus/core/responses/: formats.py  streaming.py
fabiplus/middleware/: security.py
fabiplus/tests/: test_basic.py  test_cli_templates.py  test_media_system.py  test_orm_choice.py  test_permissions_system.py  test_response_system.py  test_templates.py
scripts/: test-ci-locally.sh  verify-pypi-release.sh
